# pydisgit

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: check-format.yaml  ci.yaml
etc/deployment/: etc-sysconfig-pydisgit  example-nginx.conf  pydisgit.container  pydisgit.socket
src/pydisgit/: __init__.py  conf.py  handlers.py  hmac.py  util.py  webhook.py
